--- a/src/app/components/header/stylesheet.scss
+++ b/src/app/components/header/stylesheet.scss
@@ -1,6 +1,6 @@
 .wppw-header {
     align-content: center;
-    background: var(--hgbrand-color-white);
+    background: var(--dc-theme-white);
     box-shadow: 0 3px 9px 0 rgb(42 47 69 / 10%), 0 2px 5px 0 rgb(42 47 69 / 8%), 0 1px 1.5px 0 rgb(0 0 0 / 8%), 0 1px 2px 0 rgb(0 0 0 / 8%);
     display:flex;
     align-items: center;
@@ -33,7 +33,7 @@
 }
 
 .wppw-nav {
-    border-bottom: 1px solid var(--hgbrand-color-accent);
+    border-bottom: 1px solid var(--mdc-theme-primary--light4);
     padding: 6px 12px 0;
 }
 
@@ -51,10 +51,10 @@
         transition: all;
         
         &.active {
-            box-shadow: inset 0 -3px var(--hgbrand-color-secondary);
+            box-shadow: inset 0 -3px var(--mdc-theme-primary);
 
             &:focus{
-                box-shadow: inset 0 -3px var(--hgbrand-color-secondary), var(--hgbrand-focus);
+                box-shadow: inset 0 -3px var(--mdc-theme-primary), var(--webbrand-focus);
             }
         }
     }
@@ -66,17 +66,17 @@
         text-decoration: none;
 
         span.dashicon {
-            color: var(--hgbrand-color-primary);
+            color: var(--dc-theme-black);
             width: 28px;
             height: 28px;
             font-size: 28px;
         }
 
         &.active {
-            fill: var(--hgbrand-color-secondary);
+            fill: var(--mdc-theme-primary);
 
             span.dashicon {
-                color: var(--hgbrand-color-secondary);
+                color: var(--mdc-theme-primary);
             }
         }
     }
