--- a/src/app/components/accordion/stylesheet.scss
+++ b/src/app/components/accordion/stylesheet.scss
@@ -1,5 +1,5 @@
 .wppw .accordion {
-    border: 1px solid var(--hgbrand-color-secondary);
+    border: 1px solid var(--mdc-theme-primary);
     margin-bottom: .6em;
     margin-top: .6em;
     opacity: .8;
@@ -12,7 +12,7 @@
     }
 
     .accordion-summary {
-        background: var(--hgbrand-color-background);
+        background: var(--dc-theme-grey--light4);
         cursor: pointer;
         font-weight: 700;
         padding: 10px 15px;
