app component style fixes for 5.8, 5.7, 5.6, 5.5, and 5.4
mainly button, card, tab, radio components

--- a/src/app/pages/help/stylesheet.scss
+++ b/src/app/pages/help/stylesheet.scss
@@ -1,7 +1,7 @@
 .card-help {
     text-align: center;
 
-    svg {
+    .components-card-body svg {
         width: 100px;
         height: 100px;
     }
@@ -10,5 +10,11 @@
     .components-card-footer {
         flex-direction: column;
         justify-content: end;
+    }
+
+    /* <= WP 5.8 */
+    .components-card__header,
+    .components-card__footer {
+        justify-content: center;
     }
 }
