--- a/src/app/stylesheet.scss
+++ b/src/app/stylesheet.scss
@@ -126,9 +126,11 @@ body.toplevel_page_web {
     .components-card__body .components-radio-control__option label strong {
         color: var(--dc-theme-black);
     }
+
     .components-button {
         font-size: 15px;
         transition: all 0.25s ease;
+        white-space: nowrap;
 
         .dashicons, .dashicons-before:before {
             transition: all .25s ease;
@@ -138,14 +140,29 @@ body.toplevel_page_web {
             box-shadow: var(--webbrand-focus);
         }
 
-        &.is-primary {
+        &.is-primary,
+        &[variant="primary"] {
             background-color: var(--mdc-theme-primary);
+            color: var(--dc-theme-white);
         }
 
-        &.is-secondary {
+        &.is-secondary,
+        &[variant="secondary"] {
             border-color: var(--mdc-theme-primary);
             box-shadow: inset 0 0 0 1px var(--mdc-theme-primary);
             color: var(--mdc-theme-primary);
+        }
+
+        &:last-child {
+            padding-right: 1rem; /* <= WP 5.8 */
+        }
+
+        &.has-icon {
+            padding-right: 1rem;
+
+            .dashicon {
+                margin-right: 10px; /* <= WP 5.6 */
+            }
         }
     }
     a:focus {
@@ -155,6 +172,7 @@ body.toplevel_page_web {
     .components-base-control__help,
     .components-radio-control__option label span span {
         color: var(--dc-theme-grey);
+        margin-top: 0.25rem;
     }
 }
 .wppw, .wppw * {
@@ -171,9 +189,6 @@ body.toplevel_page_web {
     }
 }
 
-.components-button.has-icon {
-    padding-right: 1rem;
-}
 .components-snackbar__content {
     color: var(--dc-theme-grey--light4) !important;
 }
@@ -225,21 +240,23 @@ body.toplevel_page_web {
     z-index: -1;
 }
 
+.wppw {
+    .components-card {
+        
+        &.short {
+            margin-bottom: auto;
+        }
 
-.components-card {
-    
-    &.short {
-        margin-bottom: auto;
+        &.disabled {
+            opacity: .5;
+        }
     }
 
-    &.disabled {
-        opacity: .5;
-    }
-}
+    .components-card-body,
+    .components-card__body {
 
-.components-card-body {
-
-    &.disabled {
-        opacity: .5;
+        &.disabled {
+            opacity: .5;
+        }
     }
 }
