hide update nag on app pages

--- a/src/app/stylesheet.scss
+++ b/src/app/stylesheet.scss
@@ -105,6 +105,12 @@ body.toplevel_page_web {
             width: 0;
         }
     }
+    
+    #wpbody-content .notice,
+    #wpbody-content .update-nag {
+        display: none;
+    }
+
 }
 .wppw {
     color: var(--dc-theme-grey);
