--- a/src/app/pages/marketplace/stylesheet.scss
+++ b/src/app/pages/marketplace/stylesheet.scss
@@ -23,6 +23,7 @@
     border-color: var(--mdc-theme-primary--light4);
 
     .components-tab-panel__tabs {
+        display: flex; /* <= WP 5.4 */
         flex-direction: column; /* <= WP 5.6 */
         min-width: 10rem;
         margin-right: 2rem;
