--- a/src/app/pages/help/stylesheet.scss
+++ b/src/app/pages/help/stylesheet.scss
@@ -12,4 +12,13 @@
     .components-card__footer {
         justify-content: center;
     }
+
+    &:last-of-type {
+        @media screen and (min-width: 800px) {
+            grid-column: span 2;
+        }
+        @media screen and (min-width: 1020px) {
+            grid-column: span 3;
+        }
+    }
 }
