add notifications module
load module based component in app
tweak style update to allow in app notices do display

--- a/src/app/stylesheet.scss
+++ b/src/app/stylesheet.scss
@@ -110,6 +110,9 @@ body.toplevel_page_web {
     #wpbody-content .update-nag {
         display: none;
     }
+    #wpbody-content .newfold-notifications-wrapper .notice {
+        display: block;
+    }
 
 }
 .wppw {
