add the dolly id to the notices that are hidden on our admin app page

--- a/src/app/stylesheet.scss
+++ b/src/app/stylesheet.scss
@@ -107,6 +107,7 @@ body.toplevel_page_web {
     }
     
     #wpbody-content .notice,
+    #wpbody-content #dolly,
     #wpbody-content .update-nag {
         display: none;
     }
