remove marketplace files and replace with module
removes marketplace data components and images also version bump

--- a/src/app/pages/marketplace/stylesheet.scss
+++ b/src/app/pages/marketplace/stylesheet.scss
@@ -1,4 +1,4 @@
-.wppw-marketplace {
+.newfold-marketplace-wrapper {
     .components-card__media {
         position: relative;
         left: 2px;
@@ -25,7 +25,7 @@
     }
 }
 
-.wppw-marketplace-tabs {
+.newfold-marketplace-tabs {
     display: flex;
     border-width: 1px 0 0 0;
     border-style: solid;
